--- a/BackgroundTasksSample.fsproj
+++ b/BackgroundTasksSample.fsproj
@@ -6,6 +6,8 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <Compile Include="OptionExtensions.fs" />
+        <Compile Include="TimedHostedService.fs" />
         <Compile Include="Program.fs" />
     </ItemGroup>
 
