Port scoped service example code
https://docs.microsoft.com/en-us/aspnet/core/fundamentals/host/hosted-services?view=aspnetcore-3.1&tabs=netcore-cli#consuming-a-scoped-service-in-a-background-task

--- a/BackgroundTasksSample.fsproj
+++ b/BackgroundTasksSample.fsproj
@@ -6,7 +6,8 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <Compile Include="OptionExtensions.fs" />
+        <Compile Include="ScopedProcessingService.fs" />
+        <Compile Include="ConsumeScopedServiceHostedService.fs" />
         <Compile Include="TimedHostedService.fs" />
         <Compile Include="Program.fs" />
     </ItemGroup>
