--- a/BackgroundTasksSample.fsproj
+++ b/BackgroundTasksSample.fsproj
@@ -6,9 +6,9 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <Compile Include="ScopedProcessingService.fs" />
-        <Compile Include="ConsumeScopedServiceHostedService.fs" />
-        <Compile Include="TimedHostedService.fs" />
+        <Compile Include="Services\ScopedProcessingService.fs" />
+        <Compile Include="Services\ConsumeScopedServiceHostedService.fs" />
+        <Compile Include="Services\TimedHostedService.fs" />
         <Compile Include="Program.fs" />
     </ItemGroup>
 
